syntax = "proto3";

import public "response_code.proto";

package manipulate;

enum ManipulateType {
  DEFAULT_TYPE = 0;
  SPECIAL_TYPE = 1;
  OFFLINE_TYPE = 2;
  DISCONTINUE_TYPE = 3;
  CANCEL_TYPE = 4;
  CONFIRM_TYPE = 5;
}

service Manipulate {
  rpc send_manipulate (ManipulateReq) returns (ManipulateResp) {}
}

message ManipulateReq {
  ManipulateType manipulate_type = 1;
  string use_module_name = 2;
  string command = 3;
}

message ManipulateResp {
  bool status = 1;
  response_code.RespCode resp_code = 2;
}